--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ subtitle: Your awesome subtitle
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
+author: Amine M'Charrak
+email: amine.mcharrak@tum.de
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
@@ -45,18 +45,14 @@ url: "" # the base hostname & protocol for your site
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
-twitter_url:
-facebook_url:
-googleplus_url:
-instagram_url:
-linkedin_url:
-github_url:
-pinterest_url:
-slack_url:
-dribbble_url:
+facebook_url: https://www.facebook.com/amine.mshark
+instagram_url: https://www.instagram.com/vitaaminem/
+linkedin_url: https://www.linkedin.com/in/amine-mcharrak/
+github_url: https://github.com/mcharrak
+
 
 # Google Analytics Tracking ID goes here:
-google_analytics:
+# google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: chrisbobbe/jekyll-theme-prologue
