--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ url: "" # the base hostname & protocol for your site
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
 facebook_url: https://www.facebook.com/amine.mshark
 instagram_url: https://www.instagram.com/vitaaminem/
-linkedin_url: https://www.linkedin.com/in/amine-mcharrak/
+linkedin_url: https://www.linkedin.com/in/mcharrak/
 github_url: https://github.com/mcharrak
 
 
