--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ github_url: https://github.com/mcharrak
 
 
 # Google Analytics Tracking ID goes here:
-# google_analytics:
+google_analytics: UA-124747697-1
 
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: chrisbobbe/jekyll-theme-prologue
