--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ title: Amine  M Charrak
 subtitle: Machine Learning & Photography
 title: Amine  M'Charrak 
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
+Delivering Machine Learning knowledge and travel inspiration.
+Sharing my mind and stories with you!
 author: Amine M'Charrak
 email: amine.mcharrak@tum.de
 avatar: assets/images/avatar.jpg
