--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,10 @@ linkedin_url: https://www.linkedin.com/in/mcharrak/
 github_url: https://github.com/mcharrak
 
 
+# Build settings
+markdown: kramdown
+
+
 # Google Analytics Tracking ID goes here:
 google_analytics: UA-124747697-1
 
